# ansible-mcp-tools

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  sample_app.py
.github/workflows/: build_and_deploy.yml
.tekton/: aap-inventory-mcp-server-pull-request.yaml  aap-inventory-mcp-server-push.yaml  ansible-mcp-controller-pull-request.yaml  ansible-mcp-controller-push.yaml  ansible-mcp-gateway-pull-request.yaml  ansible-mcp-gateway-push.yaml  ansible-mcp-lightspeed-pull-request.yaml  ansible-mcp-lightspeed-push.yaml
aap_controller_api_2_5/: Containerfile  README.md  aap-controller-api.json  pyproject.toml  server.py
aap_gateway_api_2_5/: Containerfile  README.md  aap-gateway-api.yaml  pyproject.toml  server.py
aap_inventory/: Containerfile  README.md  pyproject.toml  server.py
aap_inventory/aap_inventory_tool/: __init__.py  aap_inventory_tool.py  test_aap_inventory_tool.py
aap_lightspeed_api_1_0/: Containerfile  README.md  aap-lightspeed-api.yaml  pyproject.toml  server.py
aap_templates/: .gitignore  Makefile  README.md  env.example  pyproject.toml  requirements.txt  server.py  setup.sh  start_server.py
aap_templates/test/: requirements.yml
aap_templates/test/playbooks/: create_token.yml  hello_first_name.yml  hello_first_name_middle_name.yml  hello_world.yml  templates_seeding.yml
ansible_mcp_tools/: registry.py  sample_aap_tool.py  server.py  utils.py
ansible_mcp_tools/authentication/: lightspeed_auth.py
ansible_mcp_tools/authentication/validators/: aap_base_validator.py  aap_jwt_validator.py  aap_nop_validator.py
ansible_mcp_tools/openapi/: common.py  spec_loaders.py  tool_callers.py  tool_name_strategies.py  tool_parsers.py  tool_rules.py
ansible_mcp_tools/openapi/protocols/: spec_loader.py  tool_caller.py  tool_name_strategy.py  tool_parser.py  tool_rule.py
