[project]
name = "aap-gateway-2-5"
version = "0.0.1"
description = "AAP Gateway API 2.5 MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.0.0",
    "cryptography>=45.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "pyjwt>=2.10.1",
    "mcp>=1.9.2",
    "PyYAML>=6.0.2",
    "fire>=0.7.0",
    "shortuuid>=1.0.13",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ansible_mcp_tools"]
