[project]
name = "ansible-mcp-playbook"
version = "0.0.1"
description = "Ansible MCP Playbook Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.0",
]


